[package]

name = "spheretracer"
version = "0.0.1"
authors = ["Oscar <nova.invictus@gmail.com>"]

[dependencies.bmp]
git = "https://github.com/sondrele/rust-bmp.git"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

#[target.x86_64-pc-windows-gnu.dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs"
#default-features = false

[dependencies]
regex = "0.1.73"
lazy_static = "0.2.1"
rand = "0.3.14"
